paraview: build with external vtk

--- a/mingw-w64-paraview/PKGBUILD
+++ b/mingw-w64-paraview/PKGBUILD
@@ -4,7 +4,7 @@ _realname=paraview
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=5.11.1
-pkgrel=4
+pkgrel=6
 pkgdesc="Parallel Data Analysis and Visualization Application based on VTK. (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -49,15 +49,18 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cli11"
              "${MINGW_PACKAGE_PREFIX}-libharu"
              "${MINGW_PACKAGE_PREFIX}-nlohmann-json"
-             "${MINGW_PACKAGE_PREFIX}-utf8cpp")
+             "${MINGW_PACKAGE_PREFIX}-utf8cpp"
+             "${MINGW_PACKAGE_PREFIX}-vtk")
 source=("https://www.paraview.org/files/v${pkgver%.*}/ParaView-v${pkgver}.tar.xz"
         "001-dll-export-some-vtk-functions.patch"
         "002-Fix-build-with-gcc-13.patch"
-        "https://gitlab.kitware.com/vtk/vtk/-/merge_requests/10304.patch")
+        "https://gitlab.kitware.com/vtk/vtk/-/merge_requests/10304.patch"
+        "https://gitlab.kitware.com/paraview/paraview/-/merge_requests/6375.patch")
 sha256sums=('5cc2209f7fa37cd3155d199ff6c3590620c12ca4da732ef7698dec37fa8dbb34'
             'a9b9292be90c259f0aa058e3f4a7a08b6218f20e6cb2a71e214acda2d2302a50'
             '20733e97ccf9b0a8e615c75936ce5e4c1db0ac00e9cac30bc359d5912da38990'
-            '2f2ee0a2450d190dd6eaab7efef615fe85c8099e28c3dae5d35db6303cc82bfe')
+            '2f2ee0a2450d190dd6eaab7efef615fe85c8099e28c3dae5d35db6303cc82bfe'
+            'a14e65dbbfcd0fcc91be3e6e6c2e28cba0d4bc3c8d0f1a687700d649ef04e3de')
 
 prepare() {
   cd "${srcdir}"/ParaView-v${pkgver}
@@ -70,6 +73,8 @@ prepare() {
   patch -p1 -i "${srcdir}"/002-Fix-build-with-gcc-13.patch
   # Fix building against OpenTURNS 1.21
   patch -p1 -i "${srcdir}"/10304.patch
+  # Build with external VTK
+  patch -p1 -i "${srcdir}"/6375.patch 
 }
 
 build() {
@@ -109,6 +114,7 @@ build() {
       -DVTK_MODULE_USE_EXTERNAL_VTK_ioss=OFF \
       -DVTK_MODULE_USE_EXTERNAL_VTK_verdict=OFF \
       -DPython3_EXECUTABLE=${MINGW_PREFIX}/bin/python.exe \
+      -DPARAVIEW_USE_EXTERNAL_VTK=on \
       ../ParaView-v${pkgver}
 
   "${MINGW_PREFIX}"/bin/cmake.exe --build .
